# firework

./: .clang-format  .gitignore  CMakeLists.txt
includes/: firework.hpp
src/: CMakeLists.txt  firework.cpp  main.cpp
